edit user and show user
